cambio de fotos

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="content-container">
             <!-- Columna izquierda (imágenes) -->
             <div class="images-column">
-                <img src="img/bosque.png" alt="Nuestro compromiso ecológico" class="forest-image top-image">
+                <img src="img/angel.jpg" alt="Nuestro compromiso ecológico" class="forest-image top-image">
                 <div class="green-line-horizontal"></div>
-                <img src="img/bosque2.png" alt="Sostenibilidad financiera" class="forest-image bottom-image">
+                <img src="img/foto.jpg" alt="Sostenibilidad financiera" class="forest-image bottom-image">
             </div>
             
             <!-- Columna derecha (textos) -->
