--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Green Kapital</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/logo.png" type="image/png">
 </head>
 <body>
     <!-- Barra de mercado fija -->
@@ -306,6 +307,13 @@
         </div>
     </div>
 </div>
+
+<!-- Footer con copyright -->
+<footer class="site-footer">
+    <div class="footer-content">
+        <p>&copy; 2025 Green Kapital. Todos los derechos reservados.</p>
+    </div>
+</footer>
 
     <script src="js/main.js"></script>
 </body>
